# uspto-monal

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-26-uspto-cli-design.md  2026-04-26-uspto-cli-implementation.md
scripts/: probe_api.py
src/uspto/: analyze.py  backfill.py  cli.py  client.py  config.py  extract.py  filter.py  monitor.py  report.py  status_codes.py  storage.py
src/uspto/templates/: trends.html.j2
tests/: test_analyze.py  test_backfill.py  test_cli.py  test_client.py  test_config.py  test_extract.py  test_filter.py  test_monitor.py  test_report.py  test_storage_schema.py  test_storage_upsert.py
tests/fixtures/: seed.py
tests/fixtures/api/: files_listing_sample.json
