[project]
name = "uspto"
version = "0.1.0"
description = "CLI for monitoring USPTO trademark filings (healthcare+AI focus)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pandas>=2.2",
    "plotly>=5.20",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.scripts]
uspto = "uspto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uspto"]
